fix BUG: palavra patrocinio aparece ao habilitar o contraste

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -59,6 +59,7 @@
     font-weight: lighter;
     margin: 0;
     font-size: calc(var(--tamanhoFonte) * 0.75);
+    color: var(--input-fontColor);
 }
 
 .dblogo {
